--- a/11_DataCleaning.Rmd
+++ b/11_DataCleaning.Rmd
@@ -40,3 +40,23 @@ Now, we can view the cleaned dataset.
 head(hateCrime_Final, 10)
 
 ```
+
+The Question that we want to focus on is: 
+
+# insert question here
+
+In order to answer this, it would be good to visualize the data and determine what can be gleaned from the data
+
+Of all of the variables, only few are relevant or useful to the study that will be conducted. These Variables are:
+
+# insert variables here.
+
+They are important because #insert why here#
+
+
+
+
+
+
+
+
