added prompts for plotting and answering question (rmd)

--- a/11_DataCleaning.Rmd
+++ b/11_DataCleaning.Rmd
@@ -54,7 +54,15 @@ Of all of the variables, only few are relevant or useful to the study that will 
 4. bias : group that hate crime was committed against
 5. the offense (intimidation, actual assault, severity of the crime)
 
-They are important because #insert why here#
+They are important because we want to draw comparisons between the variabes to draw conclusions that will lead us closer towards answering our overall questions. Below are some of the ways we will use the aforementioned variables to 
+
+1. count the number of offenses per bias to see which group is most targeted
+2. count the number of offenses per race to see which group is more likely to be the offender
+3. how has the number of offenses changed over the years 
+4. variation by state of types of offenses
+5. how many of each type of offense there is and compare
+6. how biases and offense correlate (eg. do asians experience intimidation based hate crimes or assult based hate crimes)
+
 
 ```{r}
 
