--- a/11_DataCleaning.Rmd
+++ b/11_DataCleaning.Rmd
@@ -46,13 +46,19 @@ The Question that we want to focus on is:
 
 In order to answer this, it would be good to visualize the data and determine what can be gleaned from the data
 
+Here are the list of variables available to us.
+```{r}
+colnames(hateCrime)
+```
+
 Of all of the variables, only few are relevant or useful to the study that will be conducted. These Variables are:
 
 1. race of the offender : same
 2. year : year of offense
 3. state : state which offense took place
 4. bias : group that hate crime was committed against
-5. the offense (intimidation, actual assault, severity of the crime)
+5. offense: what the offense type was (ie intimidation, actual assault) dictating the severity of the crime as well
+6. victim count: how many victims per case
 
 They are important because we want to draw comparisons between the variabes to draw conclusions that will lead us closer towards answering our overall questions. Below are some of the ways we will use the aforementioned variables to 
 
@@ -65,15 +71,13 @@ They are important because we want to draw comparisons between the variabes to d
 
 
 ```{r}
-
 hateCrime_Final <- data_rename(hateCrime_Final)
-
-
+# checking if the variables are named
+head(hateCrime_Final)
 ```
 
 ```{r}
-# checking if the variables are named
-head(hateCrime_Final)
+
 ```
 
 
