--- a/12_Plots.Rmd
+++ b/12_Plots.Rmd
@@ -1,11 +1,14 @@
 # for all ploting code and testing
 As mentioned in the data cleaning file, we will be exploring the following prompts and basing the plots off of this.
 
+
 1. count the number of offenses per bias to see which group is most targeted
 
+Using a bar graph we can see that 
 ```{r}
-
+#plot_bar(hateCrime_Final, x = Bias, fill = Bias)
 ```
+
 
 2. count the number of offenses per race to see which group is more likely to be the offender
 
