--- a/12_Plots.Rmd
+++ b/12_Plots.Rmd
@@ -31,18 +31,47 @@ ggplot(race_summary, aes(x = reorder(Bias, -total_incidents),
                          y = total_incidents, 
                          fill = Bias)) +
   geom_bar(stat = "identity", show.legend = FALSE) +
-  labs(title = "Total Number of Hate Crimes by Race Targeted",
+  labs(title = "Total Number of Hate Crimes by Race",
        x = "Race Targeted",
        y = "Total Number of Reported Incidents") +
   theme_minimal() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 ```
+```{r}
+
+# define sexuality based bias groups
+sexuality_groups <- c("Anti-Gay (Male)", 
+                      "Anti-Lesbian (Female)", 
+                      "Anti-Heterosexual", 
+                      "Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)")
+
+# filter rows where Bias is in your race_groups
+sex_data <- hateCrime_Final %>%
+  filter(Bias %in% sexuality_groups)
+
+# count how many times each Bias appears
+sex_summary <- sex_data %>%
+  count(Bias, name = "total_incidents")
+
+# plot
+ggplot(sex_summary, aes(x = reorder(Bias, -total_incidents), 
+                         y = total_incidents, 
+                         fill = Bias)) +
+  geom_bar(stat = "Identity") +
+  labs(title = "Total Number of Hate Crimes by Sexuality",
+       x = "Sexuality Targeted",
+       y = "Total Number of Reported Incidents") 
+
+```
+
 
 
 2. count the number of offenses per race to see which group is more likely to be the offender
 
 ```{r}
+
+offender_race 
 
 ```
 
