bar plots for race, gender, sexuality, and religion

--- a/12_Plots.Rmd
+++ b/12_Plots.Rmd
@@ -6,17 +6,58 @@ As mentioned in the data cleaning file, we will be exploring the following promp
 
 Using a bar graph we can see that 
 
+```{r}
+
+#broad groups
+broad_groups <- hateCrime_Final %>%
+  mutate(category = case_when(
+    Bias %in% c("Anti-Black or African American", "Anti-White", "Anti-Arab", 
+                "Anti-Asian", "Anti-Hispanic or Latino", "Anti-American Indian or Alaska Native",
+                "Anti-Native Hawaiian or Other Pacific Islander",
+                "Anti-Multiple Races, Group", "Anti-Other Race/Ethnicity/Ancestry") ~ "Race/Ethnicity",
+    
+    Bias %in% c("Anti-Jewish", "Anti-Islamic (Muslim)", "Anti-Catholic", "Anti-Buddhist",
+                "Anti-Protestant", "Anti-Other Religion", "Anti-Mormon", "Anti-Jehovah's Witness", "Anti-Sikh",
+                "Anti-Atheist/Agnostic") ~ "Religion",
+    
+    Bias %in% c("Anti-Gay (Male)", "Anti-Lesbian (Female)", "Anti-Heterosexual", "Anti-Transgender",
+                "Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)") ~ "Sexual Orientation",
+    
+    #Bias %in% c("Anti-Female", "Anti-Male", "Anti-Gender Non-Conforming") ~ "Gender",
+    
+    TRUE ~ "Other"  # anything not matched goes here
+  ))
+
+# sorting by category
+
+category_summary <- broad_groups %>%
+  count(category, name = "total_incidents")
+
+# the plot
+
+ggplot(category_summary, aes(x = reorder(category, -total_incidents),
+                             y = total_incidents,
+                             fill = category)) +
+  geom_bar(stat = "identity", show.legend = FALSE) +
+  labs(title = "Hate Crimes by Category",
+       x = "Category",
+       y = "Total Number of Reported Incidents") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 15, hjust = 1))
+
+
+
+```
+
+
 
 ```{r}
 
 # define race-related bias groups
-race_groups <- c("Anti-Black or African American", 
-                 "Anti-White", 
-                 "Anti-Arab", 
-                 "Anti-Asian", 
-                 "Anti-Hispanic or Latino", 
-                 "Anti-Multiple Races, Group", 
-                 "Anti-Other Race/Ethnicity/Ancestry")
+race_groups <- c("Anti-Black or African American", "Anti-White", "Anti-Arab", 
+                "Anti-Asian", "Anti-Hispanic or Latino", "Anti-American Indian or Alaska Native",
+                "Anti-Native Hawaiian or Other Pacific Islander",
+                "Anti-Multiple Races, Group", "Anti-Other Race/Ethnicity/Ancestry")
 
 # filter rows where Bias is in your race_groups
 race_data <- hateCrime_Final %>%
@@ -38,12 +79,15 @@ ggplot(race_summary, aes(x = reorder(Bias, -total_incidents),
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 ```
+
 ```{r}
 
 # define sexuality based bias groups
 sexuality_groups <- c("Anti-Gay (Male)", 
                       "Anti-Lesbian (Female)", 
+                      "Anti-Transgender",
                       "Anti-Heterosexual", 
+                      "Anti-Gender Non-Conforming",
                       "Anti-Lesbian, Gay, Bisexual, or Transgender (Mixed Group)")
 
 # filter rows where Bias is in your race_groups
@@ -65,6 +109,31 @@ ggplot(sex_summary, aes(x = reorder(Bias, -total_incidents),
 
 ```
 
+```{r}
+
+# define religious based bias groups
+religious_groups <- c("Anti-Jewish", "Anti-Islamic (Muslim)", "Anti-Catholic", "Anti-Buddhist",
+                "Anti-Protestant", "Anti-Other Religion", "Anti-Mormon", "Anti-Jehovah's Witness", "Anti-Sikh",
+                "Anti-Atheist/Agnostic")
+
+# filter rows where Bias is in your regigious_groups
+religion_data <- hateCrime_Final %>%
+  filter(Bias %in% religious_groups)
+
+# count how many times each Bias appears
+religion_summary <- religion_data %>%
+  count(Bias, name = "total_incidents")
+
+# plot
+ggplot(religion_summary, aes(x = reorder(Bias, -total_incidents), 
+                         y = total_incidents, 
+                         fill = Bias)) +
+  geom_bar(stat = "Identity") +
+  labs(title = "Total Number of Hate Crimes by Religion",
+       x = "Religion Targeted",
+       y = "Total Number of Reported Incidents") 
+
+```
 
 
 2. count the number of offenses per race to see which group is more likely to be the offender
