--- a/11_DataCleaning.Rmd
+++ b/11_DataCleaning.Rmd
@@ -63,7 +63,7 @@ Of all of the variables, only few are relevant or useful to the study that will 
 They are important because we want to draw comparisons between the variabes to draw conclusions that will lead us closer towards answering our overall questions. Below are some of the ways we will use the aforementioned variables to 
 
 1. count the number of offenses per bias to see which group is most targeted
-2. count the number of offenses per race to see which group is more likely to be the offender
+2. compare the number of offenses per race to indentify which group is more likely to be the victim to what offenses.
 3. how has the number of offenses changed over the years 
 4. variation by state of types of offenses
 5. how many of each type of offense there is and compare
@@ -71,7 +71,10 @@ They are important because we want to draw comparisons between the variabes to d
 
 
 ```{r}
-hateCrime_Final <- data_rename(hateCrime_Clean)
+hateCrime_renamed <- data_rename(hateCrime_Clean)
+#create a new dataset with only those variables
+hateCrime_Final <- hateCrime_Final %>%
+  select("Race of Offender", Offense, Bias, Year, State, "Victim Count")
 # checking if the variables are named
 head(hateCrime_Final)
 ```
