--- a/11_DataCleaning.Rmd
+++ b/11_DataCleaning.Rmd
@@ -60,15 +60,7 @@ Of all of the variables, only few are relevant or useful to the study that will 
 5. offense: what the offense type was (ie intimidation, actual assault) dictating the severity of the crime as well
 6. victim count: how many victims per case
 
-They are important because we want to draw comparisons between the variabes to draw conclusions that will lead us closer towards answering our overall questions. Below are some of the ways we will use the aforementioned variables to 
-
-1. count the number of offenses per bias to see which group is most targeted
-2. compare the number of offenses per race to indentify which group is more likely to be the victim to what offenses.
-3. how has the number of offenses changed over the years 
-4. variation by state of types of offenses
-5. how many of each type of offense there is and compare
-6. how biases and offense correlate (eg. do asians experience intimidation based hate crimes or assult based hate crimes)
-
+They are important because we want to draw comparisons between the variabes to draw conclusions that will lead us closer towards answering our overall questions. 
 
 ```{r}
 hateCrime_renamed <- data_rename(hateCrime_Clean)
